# watcom-cmake

./: CMakeLists.txt  do_all.sh
.github/workflows/: test.yml
cmake/: djgpp-DOS.cmake  watcom-DOS-protected.cmake  watcom-DOS-real.cmake  watcom-DOS.cmake  watcom-Windows.cmake
